testing changes in odrl jsonld

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<dependency>
+    <groupId>com.io-informatics.oss</groupId>
+    <artifactId>jackson-jsonld</artifactId>
+    <version>0.1.1</version>
+</dependency>                
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
